<resources>
    <string name="app_name">My Application</string>
    <string name="Schedule">Расписание</string>
    <string name="Quality">Качество ухода</string>
    <string name="Health">Здоровье</string>
    <string name="Guide">Справочник</string>
    <string name="Name">Имя</string>
    <string name="Age">Возраст</string>
    <string name="Species">Порода</string>
    <string name="Food">Питание</string>
    <string name="Test">Тест</string>
    <string name="Care">Уход</string>
    <string name="Diseases">Заболевания</string>
</resources>